[sc-7355] Translate apps and widgets in german and portuguese (#1044)
* Add german and portuguese translations on common lib

* WIP: Add german and portuguese translations on user lib

Not finished because I reached BabelEdit translation quota

* Add pending user lib translations

* Remove unused translation key

* Fix a bad wording in english

* Add german and portuguese translations for desktop app and search widget

* [sc-7467] don't translate Knowledge Box and capitalize it everywhere

* Merge translations without making german and portuguese available in the apps.

---------

Co-authored-by: oriol <o.perramon@iskra.cat>

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -2,7 +2,7 @@
 	"account.account_name_invalid": "El nom del compte no és vàlid",
 	"account.accumulated_consumption": "Consum diari acumulat per funcionalitat",
 	"account.active_config": "Configuració activa",
-	"account.add_stash": "Afegir caixa coneixement",
+	"account.add_stash": "Afegir Knowledge Box",
 	"account.add_user": "Afegir usuari",
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
@@ -18,7 +18,6 @@
 	"account.chart_train_seconds": "Hores d'entrenament",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
-	"account.consuming": "Processament",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
 	"account.create_nua_key": "Creeu una nova clau d'API de comprensió de Nuclia",
 	"account.day_left": "Queda 1 dia",
@@ -33,8 +32,8 @@
 	"account.delete_account_confirm_title": "Eliminar el compte?",
 	"account.delete_account_warning_1": "Si suprimiu el compte {{account}} , se suprimiran totes les dades existents",
 	"account.delete_account_warning_2": "el compte i qualsevol assignació de dades de configuració, usuaris i rols",
-	"account.delete_account_warning_3": "qualsevol caixa de coneixement i totes les seves dades. Inclou dades indexades a NucliaDB",
-	"account.delete_account_warning_4": "qualsevol model entrenat de qualsevol caixa de coneixement",
+	"account.delete_account_warning_3": "qualsevol Knowledge Box i totes les seves dades. Inclou dades indexades a NucliaDB",
+	"account.delete_account_warning_4": "qualsevol model entrenat de qualsevol Knowledge Box",
 	"account.delete_user": "Vols suprimir l'usuari?",
 	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
@@ -52,7 +51,7 @@
 	"account.home": "Tauler de control del compte",
 	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
 	"account.kb-description": "Un Knowledge Box és una col·lecció de contingut en què cerca Nuclia. Alguns motors de cerca l'anomenen \"índex\" o \"corpus\". En la majoria dels casos, només necessiteu un Knowledge Box per a la vostra aplicació.",
-	"account.knowledgeboxes": "Caixes de coneixement",
+	"account.knowledgeboxes": "Knowledge Boxes",
 	"account.licence": "Llicència",
 	"account.logo": "Imatge de la caixa",
 	"account.logotip": "Logotip",
@@ -62,7 +61,7 @@
 	"account.new_token": "Nou Token",
 	"account.nua_client": "Nom del client",
 	"account.nua_key_activity": "Registre d'activitat",
-	"account.nua_key_activity_subtitle": "TODO",
+	"account.nua_key_activity_subtitle": "Activitat de la Knowledge Box dels últims 30 dies",
 	"account.nua_key_activity_title": "{{key}} registre d'activitat",
 	"account.nua_key_delete": "Suprimir la clau de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Si suprimiu aquesta clau, es perdran tots els treballs en curs (si n'hi ha).",
@@ -70,11 +69,11 @@
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook_help": "Un cop processades les teves dades, el resultat es publica a aquest URL",
 	"account.public": "Públic",
-	"account.related_kbs": "Knowledge Box relacionats amb l’Account",
+	"account.related_kbs": "Knowledge Boxes del compte",
 	"account.replace_config": "Reemplaçar configuració",
 	"account.settings": "Gestió del compte",
 	"account.speech_to_text_description": "Nuclia ofereix models millorats de veu a text. L'ús d'aquests models requereix un càlcul més elevat i suposen un cost addicional. Marqueu la casella de selecció  si voleu utilitzar els models millorats.",
-	"account.stash.add": "Afegir caixa coneixement",
+	"account.stash.add": "Afegir Knowledge Box",
 	"account.stash.delete": "Borrar",
 	"account.stash.edit": "Editar preferències",
 	"account.stash.publish": "Publica",
@@ -112,7 +111,7 @@
 	"activity.processed": "Processats",
 	"activity.resource": "Recurs",
 	"activity.search": "Consultes",
-	"activity.subtitle": "Activitat de la Caixa de coneixement dels últims 30 dies",
+	"activity.timestamp": "Segell de temps",
 	"autocomplete.section.main": "Paraules clau suggerides",
 	"autocomplete.section.next_words": "Paraules suggerides",
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
@@ -121,6 +120,7 @@
 	"billing.amount": "Import",
 	"billing.assistance": "Si us plau, <a href=\"{{url}}\"contacta amb nosaltres</a> per obtenir ajuda",
 	"billing.billing_details": "Dades de facturació",
+	"billing.budget": "Pressupost sota demanda",
 	"billing.budget_calculator": "Calculadora de pressupost",
 	"billing.budget_calculator_help": "La calculadora de pressupost et permet fer un pressupost mensual en funció dels vostres requisits específics.",
 	"billing.budget_description": "Per evitar despeses excessives en els consums mensuals, us recomanem establir un límit mensual. Si no s'estableix un límit, es poden generar càrrecs inesperats pels consums que superin la quantitat assignada.",
@@ -199,7 +199,7 @@
 	"billing.quotas.files-up-to": "Arxius fins a",
 	"billing.quotas.generative": "Resposta generativa",
 	"billing.quotas.ingestion": "Ingestió",
-	"billing.quotas.kbs": "Nombre de caixes de coneixement",
+	"billing.quotas.kbs": "Nombre de Knowledge Boxes",
 	"billing.quotas.media": "Indexació de vídeo i àudio",
 	"billing.quotas.paragraphs": "Paràgrafs emmagatzemats",
 	"billing.quotas.paragraphs_processed": "Número de paràgrafs",
@@ -269,7 +269,7 @@
 	"empty.title": "No hem trobat cap resultat :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Quantitats i mesures",
-	"error.creating-kb": "S'ha produït un error en crear el quadre de coneixement",
+	"error.creating-kb": "S'ha produït un error en crear el Knowledge Box",
 	"error.deleting-resource": "No s'ha pogut suprimir el recurs",
 	"error.deleting-resources": "No s'ha pogut suprimir {{count}} recursos",
 	"error.reprocessing-resource": "No s'ha pogut tornar a processar el recurs",
@@ -521,7 +521,7 @@
 	"resource.confirm-reprocess.plural-title": "Esteu segur que voleu tornar a processar els recursos?",
 	"resource.confirm-reprocess.title": "Esteu segur que voleu tornar a processar el recurs?",
 	"resource.description.title": "Descripció",
-	"resource.empty": "No hi ha contingut al vostre caixa de coneixement en aquest moment.",
+	"resource.empty": "No hi ha contingut al vostre Knowledge Box en aquest moment.",
 	"resource.empty_import": "Comenceu a utilitzar Nuclia a l'instant escollint un conjunt de dades de mostra. Aquesta és la manera més ràpida de començar i explorar com funciona Nuclia.",
 	"resource.entities.date": "Dates",
 	"resource.entities.event": "Esdeveniments",
@@ -651,19 +651,19 @@
 	"stash.config.option.palm": "Google PaLM 2 (beta)",
 	"stash.config.own_key": "Utilitzar key pròpia",
 	"stash.config.success": "La nova configuració s'ha desat correctament.",
-	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la caixa de coneixament.",
+	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la Knowledge Box.",
 	"stash.confirm_delete_user.title": "Estas segur que vols eliminar aquest usuari?",
-	"stash.contact_admin": "No esteu autoritzat per crear un quadre de coneixement. Contacta amb el teu administrador.",
+	"stash.contact_admin": "No esteu autoritzat per crear un Knowledge Box. Contacta amb el teu administrador.",
 	"stash.create.anonymization_model.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos del Knowledge Box",
 	"stash.create.anonymization_model.label": "Anonimatització",
-	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la caixa de coneixement. Torneu-ho a intenta, sius plau",
+	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la Knowledge Box. Torneu-ho a intenta, sius plau",
 	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
 	"stash.create.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
 	"stash.create.generative_model.label": "Generació de respostes",
-	"stash.create.in_progress": "Creació de la caixa de coneixement en curs...",
+	"stash.create.in_progress": "Creació de la Knowledge Box en curs...",
 	"stash.create.semantic_model.help": "Indiqueu els idiomes utilitzats a la informació que penjareu a la vostra KB.",
 	"stash.create.semantic_model.label": "Idiomes",
-	"stash.create.title": "Crea una caixa de coneixement",
+	"stash.create.title": "Crea una Knowledge Box",
 	"stash.create.user_prompts.examples": "Exemples",
 	"stash.create.user_prompts.prompt": "Prompt personalitzado",
 	"stash.create.user_prompts.prompt_help": "Defineix la manera com volem que actuï el sistema quan fem una pregunta. Aquí podem definir regles més específiques, que fins i tot podrien anul·lar el comportament definit. Per exemple, podríem tenir una indicació que fa que el sistema només doni resultats en llistes, o fins i tot demani que respongui en un idioma determinat.",
@@ -671,48 +671,43 @@
 	"stash.create.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
 	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
 	"stash.create.visual_labeling.label": "Anotar per selecció",
-	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta caixa de coneixament. De forma predeterminada apareix la zona escollida a l’Account",
+	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta Knowledge Box. De forma predeterminada apareix la zona escollida a l’Account",
 	"stash.create_service_access": "Crea un nou Service Access",
-	"stash.delete.delete": "Eliminar caixa de coneixement?",
-	"stash.delete.error": "Error en crear el quadre de coneixement",
-	"stash.delete.warning": "Si borres la Caixa de Coneixement {{ kb }} també s'esborraran totes les dades que conté.",
-	"stash.delete_stash": "Eliminar caixa de coneixement",
-	"stash.delete_stash_data": "Elimina la caixa de coneixament i totes les dades que conté",
+	"stash.delete.delete": "Eliminar Knowledge Box?",
+	"stash.delete.error": "Error en crear el Knowledge Box",
+	"stash.delete.warning": "Si borres la Knowledge Box {{ kb }} també s'esborraran totes les dades que conté.",
 	"stash.description": "Descipció",
 	"stash.email": "Servidor de correu",
-	"stash.empty_kb": "La caixa de coneixement encara està buida!",
+	"stash.empty_kb": "La Knowledge Box encara està buida!",
 	"stash.enable_stash_email": "Habilitar correu electrònic",
 	"stash.home.link": "Tauler d'inici",
 	"stash.home.upload-block.description": "Carregueu fitxers, carpetes, enllaços",
 	"stash.home.upload-block.description-desktop": " o trieu una font per treballar amb Nuclia amb la vostra pròpia base de dades.",
 	"stash.home.upload-block.title": "Treballa amb les teves dades",
-	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la caixa de coneixement",
-	"stash.kb_name_invalid": "El nom de la caixa de coneixement no és vàlid",
+	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la Knowledge Box.",
+	"stash.kb_name_invalid": "El nom de la Knowledge Box no és vàlid",
 	"stash.kb_slug_invalid": "El slug de la caixa de coneixement no és vàlid",
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
-	"stash.name": "Nom de la Caixa",
+	"stash.name": "Nom de la Knowledge Box",
 	"stash.name_your_kb": "Anomena el teu KB",
 	"stash.new_service_access_token": "Crear un nou token",
-	"stash.no_knowledge_boxes": "No hi ha cap cas de coneixement en aquest compte",
+	"stash.no_knowledge_boxes": "No hi ha cap cas de Knowledge Boxes en aquest compte",
 	"stash.preferences.receive_help": "Rebre ajuda",
 	"stash.preferences.receiving_emails": "Preferències del correu electrònic",
 	"stash.profile": "Configuració",
-	"stash.publish.confirm": "Publicar la caixa de coneixement significa que es farà pública i serà accessible per qualsevol persona del món. També podrà ser indexada pels cercadors públics tipus Google. ",
+	"stash.publish.confirm": "Publicar la Knowledge Box significa que es farà pública i serà accessible per qualsevol persona del món. També podrà ser indexada pels cercadors públics tipus Google. ",
 	"stash.publish.error": "Error en publicar el Knowledge Box",
-	"stash.publish.publish": "Fer pública la Caixa de Coneixement",
-	"stash.publish.title": "Publicar la caixa de coneixement",
-	"stash.publish.warning": "Si publiques la Caixa de Coneixement \"{{ kb }}\" faràs pública tota la informació que conté.",
+	"stash.publish.title": "Publicar la Knowledge Box",
+	"stash.publish.warning": "Si publiques la Knowledge Box \"{{ kb }}\" faràs pública tota la informació que conté.",
 	"stash.retire.error": "S'ha produït un error en anul·lar la publicació del Knowledge Box",
-	"stash.retire.retire": "Fer privada la Caixa de Coneixment ",
-	"stash.retire.warning": "Si despubliques la Caixa de Coneixement \"{{ kb }}\" fas privada tota la informació que conté.",
+	"stash.retire.warning": "Si despubliques la Knowledge Box \"{{ kb }}\" fas privada tota la informació que conté.",
 	"stash.search": "Cerca ",
 	"stash.search-toggle-answer": "Resposta generativa",
 	"stash.search_users": "Afegir un nou usuari",
 	"stash.search_users_add": "Vols afegir aquest nou usuari al compte?",
 	"stash.seats_available": "Queden {{ seats }} seients",
 	"stash.see_stats": "Veure dades",
-	"stash.selectStash": "Selecciona caixa de coneixement",
 	"stash.service_access": "Service Access",
 	"stash.service_access_description": "Important! Copia i guarda el codi del Token. Un cop afegit, desapareixerà. ",
 	"stash.settings.processes.classifier": "Formació sobre la intenció de cerca d'etiquetes",
@@ -728,7 +723,7 @@
 	"stash.settings.processes.training.consult-history": "Consulta totes les dades i l'estat dels entrenaments realitzats o en curs",
 	"stash.settings.processes.training.last_run": "Última execució: {{ runDate }}",
 	"stash.settings.processes.training.ner.contact": "Depenent del vostre conjunt de dades, pot ser que aquesta formació no sigui efectiva. Per avaluar si la formació en NER és rellevant en el vostre cas, <a href=\"mailto:{{email}}\">poseu-vos en contacte amb nosaltres</a>.",
-	"stash.settings.processes.training.no-resources": "Els entrenaments no estan disponibles en les caixes de coneixement buides.",
+	"stash.settings.processes.training.no-resources": "Els entrenaments no estan disponibles en les Knowledge Boxes buides.",
 	"stash.settings.processes.training.not-allowed": "Els entrenaments no estan disponibles en els comptes bàsics.",
 	"stash.settings.processes.training.select-entities": "Triar grups d'entitats",
 	"stash.settings.processes.training.select-labelset": "Trieu un conjunt d'etiquetes",
@@ -825,8 +820,8 @@
 	"stash.widgets.targetNewTab.help": "Obre en una pestanya nova",
 	"stash.widgets.targetNewTab.label": "Orienta una pestanya nova",
 	"stash.widgets.title": "Generador de widgets de cerca",
-	"stash.widgets.warning": "Perquè el giny funcioni correctament, el quadre de coneixement <strong>ha de ser públic</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Zona perillosa! Perquè aquest giny funcioni amb una caixa de coneixement privada, cal que proporcioneu un testimoni d'API.",
+	"stash.widgets.warning": "Perquè el giny funcioni correctament, el Knowledge Box <strong>ha de ser públic</strong>.",
+	"stash.widgets.warning-dangerous-snippet": "Zona perillosa! Perquè aquest giny funcioni amb una Knowledge Box privada, cal que proporcioneu un testimoni d'API.",
 	"stash.widgets.warning-dangerous-snippet-details": "No utilitzeu aquest fragment en un lloc web públic.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Començar",
@@ -885,7 +880,7 @@
 	"upload.toast.successful": "Pujada correctament",
 	"upload.upload_from_csv": "Afegir recursos des de CSV",
 	"upload.uploading_files": "<strong>Càrrega de fitxers.</strong> Mentrestant, no dubteu a utilitzar Nuclia",
-	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
+	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al Knowledge Box.",
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
 	"user.logout": "Sortir",
 	"validation.name_required": "Introdueix el nom i cognoms",
