[sc-7467] Capitalize Knowledge Boxes

--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -14,7 +14,7 @@
 	"history.clear": "Clear history",
 	"history.data": "Data",
 	"history.date": "Date",
-	"history.knowledge_box": "Knowledge box",
+	"history.knowledge_box": "Knowledge Box",
 	"history.source": "Source",
 	"history.title": "Upload history",
 	"home.active-connectors": "or check your active connectors in the list on the the left.",
