--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -14,7 +14,7 @@
 	"history.clear": "Effacer l'historique",
 	"history.data": "Données",
 	"history.date": "Date",
-	"history.knowledge_box": "Knowledge box",
+	"history.knowledge_box": "Knowledge Box",
 	"history.source": "Source",
 	"history.title": "Historique des téléchargements",
 	"home.active-connectors": "ou vérifiez vos connecteurs actifs dans la liste de gauche.",
