--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -33,8 +33,8 @@
 	"login.recover": "Recover password",
 	"login.recover_help": "Problems logging in?",
 	"login.resend_email": "Resend the email",
-	"login.scope.kbs_read": "View your Knowledge boxes",
-	"login.scope.kbs_write": "Modify your Knowledge boxes",
+	"login.scope.kbs_read": "View your Knowledge Boxes",
+	"login.scope.kbs_write": "Modify your Knowledge Boxes",
 	"login.sign-up-with": "Sign up with {{provider}}",
 	"login.signup": "Sign Up",
 	"login.subtitle": "Delivering the right answers from your internal data.",
