allow to delete kb from contributor

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -737,6 +737,7 @@
 	"stash.side.audit": "Auditoria",
 	"stash.side.classification": "Classificació",
 	"stash.side.list": "Llistat recursos",
+	"stash.side.manage-kbs": "Gestionar Knowledge Boxes",
 	"stash.side.settings": "Preferències",
 	"stash.side.synonyms": "Sinònims",
 	"stash.side.trainings": "Entrenaments",
