--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -738,6 +738,7 @@
 	"stash.side.audit": "Audit",
 	"stash.side.classification": "Classification",
 	"stash.side.list": "Resources list",
+	"stash.side.manage-kbs": "Manage Knowledge Boxes",
 	"stash.side.settings": "Settings",
 	"stash.side.synonyms": "Synonyms",
 	"stash.side.trainings": "Trainings",
