--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -737,6 +737,7 @@
 	"stash.side.audit": "Auditoría",
 	"stash.side.classification": "Clasificación",
 	"stash.side.list": "Listado de recursos",
+	"stash.side.manage-kbs": "Administrar Knowledge Boxes",
 	"stash.side.settings": "Preferencias",
 	"stash.side.synonyms": "Sinónimos",
 	"stash.side.trainings": "Entrenamientos",
