--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -738,6 +738,7 @@
 	"stash.side.audit": "Vérification",
 	"stash.side.classification": "Classification",
 	"stash.side.list": "Liste des ressources",
+	"stash.side.manage-kbs": "Gérer les Knowledge Boxes",
 	"stash.side.settings": "Réglages",
 	"stash.side.synonyms": "Synonymes",
 	"stash.side.trainings": "Entraînements",
