--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -738,6 +738,7 @@
 	"stash.side.audit": "PRÜFUNG",
 	"stash.side.classification": "Einstufung",
 	"stash.side.list": "Ressourcenliste",
+	"stash.side.manage-kbs": "Knowledge Boxes verwalten",
 	"stash.side.settings": "Die Einstellungen",
 	"stash.side.synonyms": "Synonyme",
 	"stash.side.trainings": "Schulungen",
