--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -738,6 +738,7 @@
 	"stash.side.audit": "Auditar",
 	"stash.side.classification": "Classificação",
 	"stash.side.list": "Lista de recursos",
+	"stash.side.manage-kbs": "Gerenciar Knowledge Boxes",
 	"stash.side.settings": "Definições",
 	"stash.side.synonyms": "Sinônimos",
 	"stash.side.trainings": "Treinamentos",
