--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -449,6 +449,7 @@
 	"modal.upload.queue_length": "Comprimento da fila",
 	"modal.upload.title": "Carregue seus arquivos",
 	"modal.upload_folder": "Adicionar uma pasta",
+	"need-help-book-demo": "Preciso de ajuda? Agende uma demo!",
 	"ner-add-entity-dialog.title": "Adicionar NER",
 	"ner-family-dialog.family-color": "Cor da família NER",
 	"ner-family-dialog.family-color-placeholder": "Cor hexadecimal (#ffdd1a)",
