--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -448,6 +448,7 @@
 	"modal.upload.queue_length": "Mida de la cua",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
+	"need-help-book-demo": "Necessitar ajuda? Reserva una demo!",
 	"ner-add-entity-dialog.title": "Afegeix NER",
 	"ner-family-dialog.family-color": "Color de la família NER",
 	"ner-family-dialog.family-color-placeholder": "Color hexadecimal (#ffdd1a)",
